my nerves are gone, it works in a single thread. it only kind of works multithreaded (only level 2 doesn't) oh and multithreading makes it slower